statistics of statistics

--- a/Curve Generator.ipynb
+++ b/Curve Generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,6 +238,59 @@
     "    \"\"\"\n",
     "    for i in range(n):\n",
     "        captureCurve(i, time_start, time_stop, frame_rate, resolution, plot = bool_plot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def captureCurvCSV(n, time_start, time_stop, frame_rate, resolution, bool_plot):\n",
+    "    df_curv = pd.DataFrame() \n",
+    "    for i in range(n):\n",
+    "        df_curv[i] = captureCurve(i, time_start, time_stop, frame_rate, resolution, plot = bool_plot)[0]['CURVATURE']\n",
+    "    # Export to CSV\n",
+    "    #summaryStats = df_curv.describe()\n",
+    "    #summaryStats = df_curv.describe()\n",
+    "    df_curv.to_csv('curvature.csv')\n",
+    "\n",
+    "def captureSpeedCSV(n, time_start, time_stop, frame_rate, resolution, bool_plot):\n",
+    "    df_curv = pd.DataFrame() \n",
+    "    for i in range(n):\n",
+    "        df_curv[i] = captureCurve(i, time_start, time_stop, frame_rate, resolution, plot = bool_plot)[0]['SPEED']\n",
+    "    # Export to CSV\n",
+    "    #summaryStats = df_curv.describe()\n",
+    "    #summaryStats = df_curv.describe()\n",
+    "    df_curv.to_csv('speed.csv')\n",
+    "    \n",
+    "def captureArcCSV(n, time_start, time_stop, frame_rate, resolution, bool_plot):\n",
+    "    df_curv = pd.DataFrame() \n",
+    "    for i in range(n):\n",
+    "        df_curv[i] = captureCurve(i, time_start, time_stop, frame_rate, resolution, plot = bool_plot)[0]['ARCLENGTH']\n",
+    "    # Export to CSV\n",
+    "    #summaryStats = df_curv.describe()\n",
+    "    #summaryStats = df_curv.describe()\n",
+    "    df_curv.to_csv('arclength.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:47: RuntimeWarning: invalid value encountered in true_divide\n"
+     ]
+    }
+   ],
+   "source": [
+    "captureCurvCSV(50,0,3,60, 0.0001, False)\n",
+    "captureSpeedCSV(50,0,3,60, 0.0001, False)\n",
+    "captureArcCSV(50,0,3,60, 0.0001, False)"
    ]
   },
   {
@@ -976,7 +1029,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
